--- a/Preentrega2/CSS/index.css
+++ b/Preentrega2/CSS/index.css
@@ -37,12 +37,12 @@ div{
     display: flex;
     justify-content: flex-start;
 }
-*{
-    text-decoration: none;
-    list-style: none;
-}
 a{
     color: black;
+    text-decoration: none;
+}
+footer{
+    margin-top: 40px;
 }
 .nav-start{
     display: flex;
@@ -50,11 +50,13 @@ a{
     justify-content: flex-end;
     position: relative;
     top: -80px;
+    list-style: none;
 }
 .nav-end{
     display: flex;
     gap: 10px;
     justify-content: center;
+    list-style: none;
 }
 .C1{
     display: flex;
@@ -88,4 +90,428 @@ a{
 .C3{
     display: flex;
     gap: 165px;
+    padding-bottom: 100px;
+    padding-top: 150px;
+}
+.C4 p{
+    padding-left: 380px;
+    padding-right: 380px;
+    text-align: center;
+}
+#small{
+    font-size: 14px;
+    margin: auto;
+    margin-top: 12px;
+    display: block;
+}
+#Persona {
+    width: 50px;
+    padding: 5px;
+    border-radius: 50px;
+    margin: auto;
+    display: block;
+    background-color: #b70000;
+}
+.C5{
+    padding-left: 380px;
+    padding-right: 380px;
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+footer p{
+    text-align: center;
+    color: #b70000;
+}
+footer hr{
+    width: 200px;
+    height: 2px;
+    background-color: #b70000;
+}
+#Pelota{
+    width: 265px;
+    margin-left: 200px;
+}
+.CN1{
+    display: flex;
+}
+.CN1 p{
+    margin-top: 60px;
+    margin-left: 150px;
+}
+#CN1 p{
+    margin-top: 100px;
+}
+.C6{
+    background-color: #f7f7f7 ;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.C6 ul{
+    display: flex;
+    text-align: left;
+    
+}
+form div input{
+    width: 500px;
+    height: 40px;
+    margin: 5px;
+    border-radius: 5px;
+    border-color: #b70000;
+}
+
+.Form1{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+form div{
+    display: flex;
+    flex-direction: column;
+}
+form .Boton{
+    position: relative;
+    margin-left: 200px;
+    margin-top: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 165px;
+    height: 47px;
+    font-size: 20px;
+    border-color: #780404;
+    border-radius: 30px;
+    background-color: #b70000;
+    color: #fff;
+}
+h1{
+    margin-left: 150px;
+}
+#Ubicacion{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-left: 800px;
+    margin-top: -500px;
+}
+#IGWPP{
+    margin-top: -220px;
+    margin-bottom: 90px;
+}
+#IGWPP h2{
+    margin-left: 120px;
+}
+
+#IG, #WPP{
+    width: 55px;
+    height: 55px;
+}
+#IG{
+    position: relative;
+    margin-left: 390px;
+    display: flex;
+    color: white;
+    background: linear-gradient(to bottom left, #8134af, #dd2a7b, #f58529);
+    padding: 10px;
+    border-radius: 20px;
+}
+#WPP{
+    position: relative;
+    margin-top: -75px;
+    display: flex;
+    margin-left: 150px;
+    color: white;
+    padding: 10px;
+    background-color: rgb(25, 171, 25);
+    border-radius: 20px;
+}
+.C9 h1, .C9 p{
+    text-align: center;
+    margin-bottom: 60px;
+    margin: 0px;
+}
+#FormCenter{
+    align-items: center;
+    text-align:center;
+    margin-bottom: 80px;
+}
+.Boton2{
+    align-items: center;
+    margin-top: 15px;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 165px;
+    height: 47px;
+    font-size: 20px;
+    border-color: #780404;
+    border-radius: 30px;
+    background-color: #b70000;
+    color: #fff;
+}
+
+/*@media screen and (max-width: 992px) {
+    h1, h2 {
+        font-size: 2rem;
+        margin-left: 2rem;
+        margin-right: 4rem;
+    }
+    p, nav {
+        font-size: 1rem;
+        margin-left: 2rem;
+        margin-right: 4rem;
+    }
+}
+
+
+@media screen and (max-width: 576px) {
+    h1, h2 {
+        font-size: 1.5rem;
+        margin-left: 1rem;
+        margin-right: 2rem;
+    }
+    p, nav {
+        font-size: 0.875rem;
+        margin-left: 1rem;
+        margin-right: 2rem;
+    }
+}*/
+
+/*@media (max-width:640px){
+    h1,h2{
+        font-size: 20px;
+        font-family: "Source Sans 3", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 650;
+        font-style: normal;
+        color: #b70000;
+        margin-left: 30px;
+        margin-right: 70px;
+    }
+    p, nav{
+        font-size: 20px;
+        margin-left: 30px;
+        margin-right: 70px;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    img{
+        width: 40%;
+        border-radius: 25px;
+        margin: 20px;
+        object-fit: cover;
+    }
+    div{
+        margin-left: 35px;
+    }
+    .icono{
+        width: 260px;
+        display: flex;
+        justify-content: flex-start;
+    }
+    a{
+        color: black;
+        text-decoration: none;
+    }
+    footer{
+        margin-top: 40px;
+    }
+    .nav-start{
+        display: flex;
+        gap: 10px;
+        justify-content: flex-end;
+        position: relative;
+        top: -80px;
+        list-style: none;
+    }
+    .nav-end{
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+        list-style: none;
+    }
+    .C1{
+        display: flex;
+    }
+    .iconos1 img{
+        width: 56px;
+        background-color: #b93e3e;
+    }
+    .C2Ps{
+        margin-top: 110px;
+        display: flex;
+        flex-direction: row;
+        text-align: center;
+    }
+    .iconos1 img{
+        margin-left: 0px;
+    }
+    
+    #i1{
+        padding: 10px;
+        border-radius: 25px;
+    }
+    #i2{
+        padding: 10px;
+        border-radius: 25px;
+    }
+    #i3{
+        padding: 10px;
+        border-radius: 25px;
+    }
+    .C3{
+        display: flex;
+        gap: 165px;
+        padding-bottom: 100px;
+        padding-top: 150px;
+    }
+    .C4 p{
+        padding-left: 380px;
+        padding-right: 380px;
+        text-align: center;
+    }
+    #small{
+        font-size: 14px;
+        margin: auto;
+        margin-top: 12px;
+        display: block;
+    }
+    #Persona {
+        width: 50px;
+        padding: 5px;
+        border-radius: 50px;
+        margin: auto;
+        display: block;
+        background-color: #b70000;
+    }
+    .C5{
+        padding-left: 380px;
+        padding-right: 380px;
+        text-align: center;
+        margin-bottom: 100px;
+        margin-top: 100px;
+    }
+    footer p{
+        text-align: center;
+        color: #b70000;
+    }
+    footer hr{
+        width: 200px;
+        height: 2px;
+        background-color: #b70000;
+    }
+    #Pelota{
+        width: 265px;
+        margin-left: 200px;
+    }
+    .CN1{
+        display: flex;
+    }
+    .CN1 p{
+        margin-top: 60px;
+        margin-left: 150px;
+    }
+    #CN1 p{
+        margin-top: 100px;
+    }
+    .C6{
+        background-color: #f7f7f7 ;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+    .C6 ul{
+        display: flex;
+        text-align: left;
+        
+    }
+    form div input{
+        width: 500px;
+        height: 40px;
+        margin: 5px;
+        border-radius: 5px;
+        border-color: #b70000;
+    }
+    
+    .Form1{
+        display: flex;
+        flex-direction: column;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    form div{
+        display: flex;
+        flex-direction: column;
+    }
+    form .Boton{
+        position: relative;
+        margin-left: 200px;
+        margin-top: 15px;
+        font-family: 'Source Sans Pro', sans-serif;
+        width: 165px;
+        height: 47px;
+        font-size: 20px;
+        border-color: #780404;
+        border-radius: 30px;
+        background-color: #b70000;
+        color: #fff;
+    }
+    h1{
+        margin-left: 150px;
+    }
+    #Ubicacion{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        margin-left: 800px;
+        margin-top: -500px;
+    }
+    #IGWPP{
+        margin-top: -220px;
+        margin-bottom: 90px;
+    }
+    #IGWPP h2{
+        margin-left: 120px;
+    }
+    
+    #IG, #WPP{
+        width: 55px;
+        height: 55px;
+    }
+    #IG{
+        position: relative;
+        margin-left: 390px;
+        display: flex;
+        color: white;
+        background: linear-gradient(to bottom left, #8134af, #dd2a7b, #f58529);
+        padding: 10px;
+        border-radius: 20px;
+    }
+    #WPP{
+        position: relative;
+        margin-top: -75px;
+        display: flex;
+        margin-left: 150px;
+        color: white;
+        padding: 10px;
+        background-color: rgb(25, 171, 25);
+        border-radius: 20px;
+    }
+    .C9 h1, .C9 p{
+        text-align: center;
+        margin-bottom: 60px;
+        margin: 0px;
+    }
+    #FormCenter{
+        align-items: center;
+        text-align:center;
+        margin-bottom: 80px;
+    }
+    .Boton2{
+        align-items: center;
+        margin-top: 15px;
+        font-family: 'Source Sans Pro', sans-serif;
+        width: 165px;
+        height: 47px;
+        font-size: 20px;
+        border-color: #780404;
+        border-radius: 30px;
+        background-color: #b70000;
+        color: #fff;
+    }
 }
